fixed a few more styling/spacing issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,9 @@
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
+.App {
+	padding: 0 0.3rem;
+}
 @media screen and (min-width: 500px) {
 	.App {
 		padding: 0 10vw;
@@ -54,21 +56,21 @@ header {
 	grid-template-columns: 1fr;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 770px) {
 	.item-btns {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 	}
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1130px) {
 	.item-btns {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 	}
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1500px) {
 	.item-btns {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr 1fr;
